--- a/responsive_web/exerc1/index.html
+++ b/responsive_web/exerc1/index.html
@@ -13,7 +13,7 @@
        <ul> 
         <li> <a href="index.html"> home</a>   </li>
         <li>  <a href = "mobile.html"> mobile</a> </li>
-        <li>  link  </li>
+        <li> <a href = "games.html"> games </a> </li>
        </ul>
         </nav>  
         
